# default_tgbot

./: background.py  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: requirements-checkpoint.txt
