[tool.poetry]
name = "repl_nix_defaulttgbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
telebot = "^0.0.5"
Flask = "^2.3.2"
gspread = "^5.9.0"
gspread-dataframe = "^3.3.1"
lxml = "^4.9.2"
numpy = "^1.25.0"
pandas = "^2.0.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
